objects/EProducts__x.object
<CustomObject>
    <description>Products en oDAta v2 à partir de http://pragmatiqa.com/xodata/#</description>
    <externalDataSource>Products</externalDataSource>
    <externalIndexAvailable>false</externalIndexAvailable>
    <externalName>Products</externalName>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <externalDeveloperName>DiscontinuedDate</externalDeveloperName>
        <label>Discontinued Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <externalDeveloperName>Price</externalDeveloperName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <externalDeveloperName>ReleaseDate</externalDeveloperName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <label>EProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>EProducts</pluralLabel>
</CustomObject>